--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,16 +1,92 @@
-CHANGE LOG 
+CHANGE LOG
 =================
 
-Version 1.13 (preliminary)
---------------------------
+Version 1.13
+------------
 
 * Thesis record information and file information edit forms no longer
   use XForms; all XForm code has been removed from the site.
 * Help request form has been updated to use jQuery instead of Dojo;
   commencement report has been updated to use FCKeditor instead of
   Dojo; all Dojo code has been removed from the site.
-* The list of supported browsers no longer needs to be configured in 
-  ``config.xml`` 
+* The list of supported browsers no longer needs to be configured in
+  ``config.xml``
+* The submission process has been modified in attempt to address identified
+  usability and workflow issues.
+
+Features in this release
+^^^^^^^^^^^^^^^^^^^^^^^^
+* An author can edit details for uploaded files in any modern browser, so that
+  they don't have to worry about which browser they are using to submit their
+  ETD record.
+* An author can enter their thesis information (name, language, keywords &
+  degree) in any modern browser, so that they don't have to worry about which
+  browser they are using to submit their ETD record.
+* When a student uploads a PDF to create a new ETD record, the advisor and
+  committee members are not populated to avoid invalid and/or inaccurate
+  information about advisors.
+* When a student uploads a PDF to create a new ETD record, the abstract and
+  TOC are not populated so that records are not created with incomplete or
+  unusable text.
+* When a student is viewing a draft submission without an abstract or TOC, a
+  text prompt instructs the student to add them to the record.
+* When a student goes through the submission process, he sees abstract and
+  table of contents as steps in the Submission Status list so that the student
+  knows those fields are required.
+* A user can submit a help request via a web form with the same look and feel
+  as other forms on the site, for consistency and maintainability.
+* When a student is answering the initial submission screening questions, they
+  see options side by side so that more of the form is visible on the page at one time.
+* A student submitting an ETD has an option to change her pre-selected school
+  before selecting her program to ensure that her thesis goes to the correct administrator.
+* An admin viewing an approved record has an option to "revert to draft" so that
+  students may make last-minute changes to a thesis.
+* After a student answers the three submission screening questions, the student
+  is prompted to enter their document title (instead of uploading a PDF) to begin
+  the submission process.
+* When a student is viewing a draft record, a student sees secondary (blue) edit
+  links just after the corresponding field to be edited so that secondary edit links
+  do not compete with submission status menu.
+* When a user is viewing the submission status menu of an active/draft record they
+  will see red 'X' or a green check mark next to every item on the list, so that the
+  navigation is consistent, more intuitive, and leads them to complete the record.
+* Any user viewing an ETD record can see the author's school and program, so that they
+  can tell at a glance which Emory school the thesis or dissertation is associated with
+  (and so an admin or author can correct the school, if necessary).
+* When a student is viewing a draft record and submission edit form pages, they do not
+  see search and browse links in the left side bar, so that they are less distracted
+  by links unrelated to the submission process.
+* When an anonymous user visits the ETD page, it is clear that he must login to submit
+  and manage theses and dissertations--because information to the right of the login
+  button tells him to do so.
+* A logged in student sees a highlighted  "Submit your thesis" link so that he knows
+  where to click to begin the thesis submission process.
+* An author or administrator viewing a draft record can access status key and instructions
+  when viewing the submission checklist, so that they can refer to the key and instructions
+  when necessary.
+* A student viewing his draft record page, sees a clear link to the instructions page of the
+  ETD site that opens in a new window so that the student has access to the instructions
+  for the submission process whenever he needs it during the submission process.
+* A student viewing the add/edit file page sees clear instructions about adding / editing a
+  file so that it is clear to a student reading the text that he must upload a minimum of
+  two files of his thesis or dissertation, one of which will be a PDF and the other, most
+  likely, a Word file.
+* A student viewing the edit Committee/Adviser page sees instructions that direct
+  students to use the boxes correctly.
+* A student viewing the contact edit form will see the label "date valid for mailing address"
+  instead of "date valid"  so that students know it refers to the date valid for their
+  mailing address.
+* A user of the site will see links for abstract and table of contents named and styled
+  consistently with the other edit links on draft submission page so the page will have
+  uniform look and feel.
+* A student editing information on his draft record sees updated/more concise text so
+  that he can use the site more effectively.
+* A student beginning the submission process will see a consistently formatted list of
+  screening questions so that they can easily see which questions are related and fill out all fields.
+* An author starting a new submission will see updated screening question text so that
+  they will have a better understanding of their responsibility in regard to copywrite laws,
+  patented information and embargoing their submission.
+
 
 
 Version 1.12.5 - April 2012
@@ -45,20 +121,20 @@ Version 1.12 - October 2011
 
 Version 1.11.1 - September 2011
 ---------------------------------------
-* Change label for "Graduate School" to "Laney Graduate School" 
+* Change label for "Graduate School" to "Laney Graduate School"
 * Fix bug for research fields link on short list.
-* Add last-modified and etag headers to file download view; 
-  honor if-none-match and if-modified-since headers on request 
-* Add last-modified header to etd record view; 
+* Add last-modified and etag headers to file download view;
+  honor if-none-match and if-modified-since headers on request
+* Add last-modified header to etd record view;
   honor if-modified-since header
-* If guest user, do not attempt to retrieve the abstract/toc 
+* If guest user, do not attempt to retrieve the abstract/toc
   if the abstract/toc is embargoed for fullrecord view.
 * Add firefox 6 to list of supported browsers.
 
 Version 1.11 - July 2011
 ---------------------------------------
-* Improved PDF Processing on Advisor prefixes. 
-* Improved PDF Processing on Abstract data. 
+* Improved PDF Processing on Advisor prefixes.
+* Improved PDF Processing on Abstract data.
 * Create the ark target based on the originating server.
 * New link available at top of ETD edit record page to jump to replace PDF.
 * Revised ETD email report to take parameters for school, year and status.
@@ -76,7 +152,7 @@ Version 1.11 - July 2011
 Version 1.10.5 - June 2011 (bugfix)
 ---------------------------------------
 * Use a new local modified version of the mads schema
-* Update the url for the cs-xacml-schema-policy-01.xsd 
+* Update the url for the cs-xacml-schema-policy-01.xsd
   so that it is valid outside of apache for the publish script.
 
 Version 1.10.4 - April 2011 (add proxy)
@@ -149,7 +225,7 @@ Version 1.8.5 - November 2010 (minor update - utility script)
 Manual Config Change - November 2010
 ------------------------------------
 * schools.xml ->  rollins -> submission_fields:
-    Changed <required>committee members</required> 
+    Changed <required>committee members</required>
     to
     <optional>committee members</optional>
 
@@ -191,7 +267,7 @@ Version 1.8 - October 2010 (enhancements)
 Version 1.7.3 - August 2010 (bugfix)
 ------------------------------------
 * Fixed bug in etdSet code which caused email templates to not function correctly.
-* Fixed bug in etd search filtering. 
+* Fixed bug in etd search filtering.
 
 
 Version 1.7.2 - August 2010 (bugfix)
@@ -206,7 +282,7 @@ Version 1.7.3 - August 2010 (bugfix)
 Version 1.7.2 - August 2010 (bugfix)
 ------------------------------------
 * Fixed bug in embargo_expiration script.
- 
+
 Version 1.7.1 - August 2010 (bugfix)
 ------------------------------------
 * Fixed bug in pagination code in searchController that caused results with one item to fail.
@@ -217,7 +293,7 @@ Version 1.7 - August 2010 (enhancements)
 * Site news and subject documents are now pulled from an RSS feed from tagged content on
    the Digital Libraries drupal site
 * Open Flash Chart Version 2 Lug Wyrm Charmer
-    download at http://sourceforge.net/projects/openflashchart/files/ 
+    download at http://sourceforge.net/projects/openflashchart/files/
     open-flash-chart-2-Lug-Wyrm-Charmer.zip (5.0 MB   2009-07-27    68,688)
     Note: modified OFC_Charts_Bar_Stack.php to allow for stacked bar chart legend key to display.
 * Output of the publication script now has enough information to determine which non-honors undergrad are skipped.
@@ -305,7 +381,7 @@ Version 1.2 - April 2009
 * new honors admin role
 * customized honors version of etd models with different requirements
 * admin feature : edit program hierarchy
-* revised program hierarchy handling 
+* revised program hierarchy handling
 * allow former faculty to be set as committee chair/members
 
 
@@ -329,8 +405,8 @@ Version 1.0 - October 30, 2008
 * keyword reverse order problem fixed (bugfix in latest version of formfaces xforms)
 * allow student to delete file (deletes but does not purge in repository)
 * updated rights metadata language
-* additional emails to embargo expiration script: 7-day warning/summary to ETD-ADMIN, 
-  day-of expiration to author's permanent  address and committee    
+* additional emails to embargo expiration script: 7-day warning/summary to ETD-ADMIN,
+  day-of expiration to author's permanent  address and committee
 * cleaned up all command line scripts, moved common code into one place
 * experimental interactive php console with etd paths and classes loaded
 * fixed bug that allowed submitting a record without an original document
