--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGE LOG
 =================
+Version 1.18.5
+--------------
+* Updated text on the ETD help form.
+* Updated navigation menu
+
 Version 1.18.4
 --------------
 * Removed, for real this time, warning that abstract is too long.
